Update index.html path

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="el">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=slides/Customer Systems Presentation_v4.html" />
+  <meta http-equiv="refresh" content="0; url=Customer Systems Presentation_v4.html" />
   <title>Customer Systems Presentation</title>
   <script>
-    window.location.href = "slides/Customer Systems Presentation_v4.html";
+    window.location.href = "Customer Systems Presentation_v4.html";
   </script>
 </head>
 <body>
-  <p>Redirecting to <a href="slides/Customer Systems Presentation_v4.html">Customer Systems Presentation</a>...</p>
+  <p>Redirecting to <a href="Customer Systems Presentation_v4.html">Customer Systems Presentation</a>...</p>
 </body>
 </html>
 
