--- a/slides/Customer Systems Presentation_v4.html
+++ b/slides/Customer Systems Presentation_v4.html
@@ -43,7 +43,7 @@
 
     .slide {
       min-height: 100vh;
-      padding: 20px 55px 24px;
+      padding: 16px 50px 20px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -51,19 +51,19 @@
     }
 
     .slide-header {
-      margin-bottom: 8px;
+      margin-bottom: 4px;
     }
 
     .eyebrow {
-      font-size: 16px;
+      font-size: 14px;
       letter-spacing: 0.16em;
       text-transform: uppercase;
       color: var(--magenta);
       font-weight: 700;
-      margin-bottom: 10px;
+      margin-bottom: 4px;
       position: relative;
       display: inline-block;
-      padding-bottom: 4px;
+      padding-bottom: 2px;
     }
 
     .eyebrow::after {
@@ -111,26 +111,9 @@
       position: relative;
     }
 
-    .content-grid::after {
-      content: "";
-      grid-column: 2;
-      background: linear-gradient(180deg, transparent 0%, var(--border-subtle) 20%, var(--border-subtle) 80%, transparent 100%);
-      width: 1px;
-      opacity: 0.4;
-    }
 
     .content-column {
-      padding: 0 20px;
-    }
-
-    .content-column:first-child {
-      padding-left: 0;
-      grid-column: 1;
-    }
-
-    .content-column:last-child {
-      padding-right: 0;
-      grid-column: 3;
+      padding: 0;
     }
 
     .card {
@@ -163,9 +146,9 @@
     }
 
     .card-title {
-      font-size: 20px;
+      font-size: 18px;
       font-weight: 700;
-      margin-bottom: 4px;
+      margin-bottom: 2px;
       letter-spacing: -0.01em;
     }
 
@@ -184,22 +167,22 @@
     }
 
     .card-body {
-      font-size: 14px;
+      font-size: 13px;
       color: var(--text-main);
-      line-height: 1.6;
+      line-height: 1.5;
     }
 
     ul {
       list-style: none;
-      margin-top: 8px;
+      margin-top: 4px;
       display: flex;
       flex-direction: column;
-      gap: 6px;
+      gap: 4px;
       padding-left: 0;
     }
 
     li {
-      font-size: 13px;
+      font-size: 12.5px;
       color: var(--text-main);
       padding-left: 18px;
       position: relative;
@@ -218,24 +201,25 @@
     }
 
     .kpi-row {
-      margin-top: 12px;
+      margin-top: 8px;
       display: flex;
       flex-wrap: wrap;
-      gap: 6px;
-      font-size: 11px;
+      gap: 4px;
+      font-size: 10px;
     }
 
     .kpi-pill {
-      padding: 6px 12px;
+      padding: 5px 10px;
       border-radius: 999px;
       border: 1px solid var(--magenta);
       background: linear-gradient(135deg, var(--magenta-soft) 0%, rgba(251, 229, 241, 0.6) 100%);
       color: var(--magenta);
       font-weight: 600;
+      font-size: 10px;
       box-shadow: 0 1px 3px rgba(226, 0, 116, 0.15);
       display: inline-flex;
       align-items: center;
-      gap: 6px;
+      gap: 4px;
     }
 
     .kpi-pill::before {
@@ -310,7 +294,7 @@
     .team-list {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 8px;
     }
 
     .team-section {
@@ -351,7 +335,7 @@
     }
 
     .team-content {
-      padding: 7px 9px 7px;
+      padding: 6px 8px 6px;
       display: flex;
       flex-direction: column;
       gap: 2px;
@@ -363,6 +347,13 @@
       align-items: baseline;
       gap: 8px;
       margin-bottom: 2px;
+    }
+
+    .team-name {
+      font-size: 15px;
+      font-weight: 700;
+      color: var(--text-main);
+      letter-spacing: -0.01em;
     }
 
     .team-section.prodact-rangers .team-name {
@@ -408,7 +399,7 @@
 
     .team-group-list li.celebrating {
       position: relative;
-      padding: 8px 10px 8px 32px;
+      padding: 6px 8px 6px 30px;
       background: linear-gradient(135deg, var(--magenta-soft) 0%, rgba(251, 229, 241, 0.5) 100%);
       border-left: 4px solid var(--magenta);
       border-radius: 6px;
@@ -498,9 +489,9 @@
 
     .footer-bar {
       border-top: 1px solid var(--border-subtle);
-      padding-top: 2px;
-      margin-top: 8px;
-      font-size: 11px;
+      padding-top: 1px;
+      margin-top: 4px;
+      font-size: 10px;
       color: var(--text-muted);
       display: flex;
       justify-content: space-between;
@@ -537,7 +528,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 6px;
     }
 
     .key-message {
@@ -545,11 +536,11 @@
       border-radius: var(--radius-md);
       border: 1px solid var(--border-subtle);
       border-top: 3px solid var(--magenta);
-      padding: 12px 14px 10px;
+      padding: 10px 12px 8px;
       box-shadow: 0 4px 12px rgba(15, 23, 42, 0.08), inset 0 1px 0 rgba(255, 255, 255, 0.8);
       display: flex;
       flex-direction: column;
-      gap: 4px;
+      gap: 3px;
       position: relative;
     }
 
@@ -602,9 +593,9 @@
     }
 
     .key-body {
-      font-size: 14px;
+      font-size: 12.5px;
       color: var(--text-main);
-      line-height: 1.6;
+      line-height: 1.5;
     }
 
     .key-body strong {
@@ -738,12 +729,12 @@
       }
     }
 
-    .content-column:first-child {
-      animation: fadeInLeft 0.5s ease-out;
-    }
-
-    .content-column:last-child {
-      animation: fadeInRight 0.5s ease-out;
+    .content-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 0;
+      align-items: stretch;
+      position: relative;
     }
 
     @media (max-width: 960px) {
@@ -753,10 +744,6 @@
 
       .content-grid {
         grid-template-columns: 1fr;
-      }
-
-      .content-grid::before {
-        display: none;
       }
 
       .content-column {
@@ -790,14 +777,13 @@
 </head>
 <body>
 
-  <!-- SLIDE 1 – What We Achieved -->
+  <!-- SLIDE 1 – Squad Achievements -->
   <section class="slide">
     <header class="slide-header">
       <div class="eyebrow">Value Delivery Domain - Customer Systems</div>
     </header>
 
     <main class="content-grid">
-      <!-- Αριστερά – Squad Achievements -->
       <div class="content-column">
       <section class="card">
         <div class="card-kicker">Squad Achievements</div>
@@ -920,8 +906,24 @@
         </div>
       </section>
       </div>
+    </main>
 
-      <!-- Δεξιά – Strategic Streams -->
+    <footer class="footer-bar">
+      <div class="footer-left">
+      </div>
+      <div class="footer-right">
+        Value Delivery Domain
+      </div>
+    </footer>
+  </section>
+
+  <!-- SLIDE 2 – Strategic Streams -->
+  <section class="slide">
+    <header class="slide-header">
+      <div class="eyebrow">Value Delivery Domain - Customer Systems</div>
+    </header>
+
+    <main class="content-grid">
       <div class="content-column">
       <section class="card strategic-streams-section">
         <div class="card-kicker">Strategic Streams</div>
