Update Stream 1 text: FTTH transformation and FWA Use Cases

--- a/slides/Customer Systems Presentation_v4.html
+++ b/slides/Customer Systems Presentation_v4.html
@@ -940,8 +940,8 @@
               <span class="meta-pill orange">Fibercats</span>
             </div>
             <p class="key-body">
-              <strong>Επεκτείνουμε τα SD-X προϊόντα, συνεχίζουμε τις επόμενες φάσεις FWA & Selfcare</strong>
-              και προχωράμε με CFO full launch & WB FTTH redesign. Στόχος είναι πιο απλές,
+              <strong>Συνεχίζουμε το transformation του FTTH Process, παραδίδουμε νέα FWA Use Cases</strong>
+              και προχωράμε με CFO και Product Selfcare Roadmap & WB FTTH Redesign. Στόχος είναι πιο απλές,
               ταχύτερες και αξιόπιστες FTTH & ordering ροές, με μετρήσιμο impact στις ενεργοποιήσεις.
             </p>
           </div>
