Remove bold from key sentences and set all key-body text to 14.5px

--- a/slides/Customer Systems Presentation_v4.html
+++ b/slides/Customer Systems Presentation_v4.html
@@ -593,7 +593,7 @@
     }
 
     .key-body {
-      font-size: 12.5px;
+      font-size: 14.5px;
       color: var(--text-main);
       line-height: 1.5;
     }
@@ -601,6 +601,11 @@
     .key-body strong {
       font-weight: 600;
       font-size: 14.5px;
+    }
+
+    .key-body .highlight-text {
+      font-size: 14.5px;
+      font-weight: 400;
     }
 
     .meta-pill {
@@ -940,7 +945,7 @@
               <span class="meta-pill orange">Fibercats</span>
             </div>
             <p class="key-body">
-              <strong>Συνεχίζουμε το transformation του FTTH Process, παραδίδουμε νέα FWA Use Cases</strong>
+              <span class="highlight-text">Συνεχίζουμε το transformation του FTTH Process, παραδίδουμε νέα FWA Use Cases</span>
               και προχωράμε με CFO και Product Selfcare Roadmap & WB FTTH Redesign. Στόχος είναι πιο απλές,
               ταχύτερες και αξιόπιστες FTTH & ordering ροές, με μετρήσιμο impact στις ενεργοποιήσεις.
             </p>
@@ -955,7 +960,7 @@
               <span class="meta-pill brown">Owls</span>
             </div>
             <p class="key-body">
-              <strong>Mesh Comcast & WiFi Pulse ενισχύουν την end-to-end WiFi εμπειρία</strong>
+              <span class="highlight-text">Mesh Comcast & WiFi Pulse ενισχύουν την end-to-end WiFi εμπειρία</span>
               και υποστηρίζουν τη στρατηγική Load Reduction. Παράλληλα, αυτοματοποιούμε συνδυαστικά ραντεβού
               και Massive Faults (active & passive) για FTTH, μειώνοντας μη πωλησιακές κλήσεις
               και manual interventions.
@@ -970,7 +975,7 @@
               <span class="meta-pill blue">Trailblazers</span>
             </div>
             <p class="key-body">
-              <strong>Ενισχύουμε τις B2B ροές με dedicated processes για Public Bids</strong>
+              <span class="highlight-text">Ενισχύουμε τις B2B ροές με dedicated processes για Public Bids</span>
               και EU projects μέσω Cosmote Global Solutions, ενώ το MVP για Quote-to-Order automation αποτελεί
               κομβικό βήμα προς πιο αυτοματοποιημένο, data-driven sales lifecycle.
             </p>
@@ -985,7 +990,7 @@
               <span class="meta-pill">Stakeholders</span>
             </div>
             <p class="key-body">
-              <strong>Χτίζουμε σχέσεις εμπιστοσύνης με βασικούς stakeholders σε FTTH & B2B</strong>,
+              <span class="highlight-text">Χτίζουμε σχέσεις εμπιστοσύνης με βασικούς stakeholders σε FTTH & B2B</span>,
               ενδυναμώνουμε τα squads με καθαρότερες ροές, target-architecture design. Το ΑΙ είναι πλέον στη ζωή μας, στο development μας και στις λύσεις που σχεδιάζουμε
             </p>
           </div>
