Translate entire presentation from Greek to English

--- a/slides/Customer Systems Presentation_v4.html
+++ b/slides/Customer Systems Presentation_v4.html
@@ -811,9 +811,9 @@
 
               <div class="team-group">
                 <ul class="team-group-list">
-                  <li>FTTH redesign for Pilot/Follower: <strong>25% μείωση στον χρόνο ολοκλήρωσης</strong> πιλοτικής παραγγελίας, μέσω εξάλειψης manual βημάτων & αυτόματης ανάθεσης όλων των activities στον ίδιο εργολάβο.</li>
-                  <li>Stop Selling Copper: <strong>36% αύξηση FTTH ενεργοποιήσεων</strong> σε διασυνδεδεμένα κτίρια μετά το rollout.</li>
-                  <li class="celebrating">Σχέση εμπιστοσύνης με βασικούς stakeholders: Μέσα σε έναν χρόνο διαμορφώθηκε σχέση εμπιστοσύνης, με συνεχή βελτίωση παραγωγικών διαδικασιών, αναβάθμιση εμπειρίας πελάτη και παραγωγή αξίας σε στρατηγικό FTTH πυλώνα.</li>
+                  <li>FTTH redesign for Pilot/Follower: <strong>25% reduction in completion time</strong> for pilot orders, through elimination of manual steps & automatic assignment of all activities to the same contractor.</li>
+                  <li>Stop Selling Copper: <strong>36% increase in FTTH activations</strong> in connected buildings after rollout.</li>
+                  <li class="celebrating">Trust relationship with key stakeholders: Within a year, a trust relationship was established, with continuous improvement of productive processes, customer experience upgrade and value creation in the strategic FTTH pillar.</li>
                 </ul>
               </div>
             </div>
@@ -834,8 +834,8 @@
 
               <div class="team-group">
                 <ul class="team-group-list">
-                  <li class="celebrating">Fault Navigator: real-time παρακολούθηση βλαβών στο COSMOTE App & myCOSMOView, με ίδια εικόνα για πελάτη και agent.<br>Στόχος: Μείωση μη πωλησιακών κλήσεων, Ενίσχυση του digital deflection, Αύξηση του NPS</li>
-                  <li>FTTH Massive Active Equipment: διαχείριση μαζικών βλαβών ενεργού εξοπλισμού με αυτόματη δημιουργία individual faults.<br>Έργο κάτω από την ομπρέλα Load Reduction.</li>
+                  <li class="celebrating">Fault Navigator: real-time fault monitoring in COSMOTE App & myCOSMOView, with the same view for customer and agent.<br>Goal: Reduce non-sales calls, Enhance digital deflection, Increase NPS</li>
+                  <li>FTTH Massive Active Equipment: management of massive active equipment faults with automatic creation of individual faults.<br>Project under the Load Reduction umbrella.</li>
                 </ul>
               </div>
             </div>
@@ -856,8 +856,8 @@
 
               <div class="team-group">
                 <ul class="team-group-list">
-                  <li class="celebrating">Stop Selling VPU_Light: στρατηγικό έργο στο πλαίσιο προώθησης του FTTH, με στοχευμένη μετάβαση από legacy προϊόντα.</li>
-                  <li>Pilot/Follower redesign: απλοποίηση αρχιτεκτονικής FTTH provisioning και ενίσχυση σταθερότητας της πλατφόρμας.</li>
+                  <li class="celebrating">Stop Selling VPU_Light: strategic project within the framework of FTTH promotion, with targeted transition from legacy products.</li>
+                  <li>Pilot/Follower redesign: simplification of FTTH provisioning architecture and enhancement of platform stability.</li>
                 </ul>
               </div>
             </div>
@@ -878,8 +878,8 @@
 
               <div class="team-group">
                 <ul class="team-group-list">
-                  <li>Product Configuration Selfcare και με χρήση Chat bot.</li>
-                  <li class="celebrating">FWA stream (student, connected schools, freeze) με ολοκληρωμένες end-to-end ροές.</li>
+                  <li>Product Configuration Selfcare and using Chat bot.</li>
+                  <li class="celebrating">FWA stream (student, connected schools, freeze) with integrated end-to-end flows.</li>
                 </ul>
               </div>
             </div>
@@ -900,9 +900,9 @@
 
               <div class="team-group">
                 <ul class="team-group-list">
-                  <li>Dedicated process για Public Bids, καλύπτοντας Sales, Pre-Sales, Contract Managers, Bid/Tender Support & Project Managers, με στόχο πιο ομοιόμορφες διαδικασίες και μειωμένο ρίσκο.</li>
-                  <li>Revenue prediction mechanism για ICT προϊόντα, ευθυγραμμισμένο με DT Central, βελτιώνοντας την ακρίβεια του revenue planning.</li>
-                  <li class="celebrating">Performance Optimization σε Salesforce: Σε βάθος technical review και στοχευμένες βελτιστοποιήσεις απόδοσης στο Salesforce οικοσύστημα, με απτά αποτελέσματα στην καθημερινή χρήση σε κάθε βήμα του Process (9% - 93% βελτίωση του performance σε στοχευμένα actions)</li>
+                  <li>Dedicated process for Public Bids, covering Sales, Pre-Sales, Contract Managers, Bid/Tender Support & Project Managers, aiming for more uniform processes and reduced risk.</li>
+                  <li>Revenue prediction mechanism for ICT products, aligned with DT Central, improving revenue planning accuracy.</li>
+                  <li class="celebrating">Performance Optimization in Salesforce: In-depth technical review and targeted performance optimizations in the Salesforce ecosystem, with tangible results in daily use at every step of the Process (9% - 93% performance improvement in targeted actions)</li>
                 </ul>
               </div>
             </div>
@@ -945,9 +945,9 @@
               <span class="meta-pill orange">Fibercats</span>
             </div>
             <p class="key-body">
-              <span class="highlight-text">Συνεχίζουμε το transformation του FTTH Process, παραδίδουμε νέα FWA Use Cases</span>
-              και προχωράμε με CFO και Product Selfcare Roadmap & WB FTTH Redesign. Στόχος είναι πιο απλές,
-              ταχύτερες και αξιόπιστες FTTH & ordering ροές, με μετρήσιμο impact στις ενεργοποιήσεις.
+              <span class="highlight-text">We continue the transformation of the FTTH Process, deliver new FWA Use Cases</span>
+              and proceed with CFO and Product Selfcare Roadmap & WB FTTH Redesign. The goal is simpler,
+              faster and more reliable FTTH & ordering flows, with measurable impact on activations.
             </p>
           </div>
 
@@ -960,10 +960,10 @@
               <span class="meta-pill brown">Owls</span>
             </div>
             <p class="key-body">
-              <span class="highlight-text">Mesh Comcast & WiFi Pulse ενισχύουν την end-to-end WiFi εμπειρία</span>
-              και υποστηρίζουν τη στρατηγική Load Reduction. Παράλληλα, αυτοματοποιούμε συνδυαστικά ραντεβού
-              και Massive Faults (active & passive) για FTTH, μειώνοντας μη πωλησιακές κλήσεις
-              και manual interventions.
+              <span class="highlight-text">Mesh Comcast & WiFi Pulse enhance the end-to-end WiFi experience</span>
+              and support the Load Reduction strategy. In parallel, we automate combined appointments
+              and Massive Faults (active & passive) for FTTH, reducing non-sales calls
+              and manual interventions.
             </p>
           </div>
 
@@ -975,9 +975,9 @@
               <span class="meta-pill blue">Trailblazers</span>
             </div>
             <p class="key-body">
-              <span class="highlight-text">Ενισχύουμε τις B2B ροές με dedicated processes για Public Bids</span>
-              και EU projects μέσω Cosmote Global Solutions, ενώ το MVP για Quote-to-Order automation αποτελεί
-              κομβικό βήμα προς πιο αυτοματοποιημένο, data-driven sales lifecycle.
+              <span class="highlight-text">We strengthen B2B flows with dedicated processes for Public Bids</span>
+              and EU projects through Cosmote Global Solutions, while the MVP for Quote-to-Order automation represents
+              a key step towards a more automated, data-driven sales lifecycle.
             </p>
           </div>
 
@@ -990,15 +990,15 @@
               <span class="meta-pill">Stakeholders</span>
             </div>
             <p class="key-body">
-              <span class="highlight-text">Χτίζουμε σχέσεις εμπιστοσύνης με βασικούς stakeholders σε FTTH & B2B</span>,
-              ενδυναμώνουμε τα squads με καθαρότερες ροές, target-architecture design. Το ΑΙ είναι πλέον στη ζωή μας, στο development μας και στις λύσεις που σχεδιάζουμε
+              <span class="highlight-text">We build trust relationships with key stakeholders in FTTH & B2B</span>,
+              empower squads with cleaner flows, target-architecture design. AI is now in our lives, in our development and in the solutions we design
             </p>
           </div>
         </section>
         
         <div class="kpi-row" style="margin-top: 10px;">
-          <span class="kpi-pill">5 squads · κοινή κατεύθυνση</span>
-          <span class="kpi-pill">Εστίαση σε FTTH · One Order · Digital Experience · B2B</span>
+          <span class="kpi-pill">5 squads · common direction</span>
+          <span class="kpi-pill">Focus on FTTH · One Order · Digital Experience · B2B</span>
         </div>
         </div>
       </section>
